clusters/cl01tl/manifests/immich/HTTPRoute-immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: immich
    helm.sh/chart: immich-5.3.0
  namespace: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "immich.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-main
          namespace: immich
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
